@@ -1378,6 +1378,8 @@ Joerg Weber
    * Improved smartmask feature: real moving objects don't trigger the mask anymore.
    * Added area_detect feature.
    * Add draw a RED box around the movement as default.
+   * Split locate_motion into separate 'mode' and 'style' option to allow all
+     possible combinations.
 
 Dirk Wesenberg
    * Track pan/tilt support for uvcvideo ( Michal Licko ,Dirk Wesenberg and Angel Carpintero )
